--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 ## Build generated
 build/
 DerivedData/
+Packages
 
+*.xcodeproj
 ## Various settings
 *.pbxuser
 !default.pbxuser
@@ -16,6 +18,7 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata/
+*.swp
 
 ## Other
 *.moved-aside
